<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never">

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        app:title="@string/appearance">

        <Preference
            android:layout="@layout/preference_layout"
            android:summary="@string/app_theme"
            app:key="app_theme"
            app:title="@string/app_theme"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:layout="@layout/preference_layout"
            android:summary="@string/settings_accent_colour"
            app:key="accent_color"
            app:title="@string/settings_accent_colour"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        app:title="@string/help">


        <Preference
            app:key="feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="Send feedback" />

    </PreferenceCategory>
    <Preference
        app:layout="@layout/preference_layout_logout_button"
        app:title="Logout"
        app:key="logout" />

</PreferenceScreen>

